Dupli-verts/dupli-faces not working. #53269

Closed
opened 2017-11-08 13:12:19 +01:00 by Dalai Felinto · 12 comments

Blender Version
Broken: 1b18e15802 (also on facdc15fdd)

Short description of error
Dupli-verts or dupli-faces not working.

Exact steps for others to reproduce the error

  • Parent lamp to default cube, set cube Duplication to Verts.

Or open this 2.79 file that has a torus in each of the (vertex-only) cube vertices:
dupli-verts.blend

**Blender Version** Broken: 1b18e15802 (also on facdc15fdd) **Short description of error** Dupli-verts or dupli-faces not working. **Exact steps for others to reproduce the error** * Parent lamp to default cube, set cube `Duplication` to `Verts`. Or open this 2.79 file that has a torus in each of the (vertex-only) cube vertices: [dupli-verts.blend](https://archive.blender.org/developer/F1107002/dupli-verts.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2017-11-08 13:13:16 +01:00
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Owner

@Sergey do you know if this is a depsgraph issue?

@Sergey do you know if this is a depsgraph issue?
Sergey Sharybin was unassigned by Dalai Felinto 2017-11-08 13:23:26 +01:00
Dalai Felinto self-assigned this 2017-11-08 13:23:26 +01:00
Author
Owner

Nevermind, that's on me.

Nevermind, that's on me.

This issue was referenced by 3750dfaa0a

This issue was referenced by 3750dfaa0a23130f1fc5200b67443ce68fa4d930
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Owner

Problem still exists for Cycles

Problem still exists for Cycles

Added subscriber: @mano-wii

Added subscriber: @mano-wii

In #53269#469815, @dfelinto wrote:
Problem still exists for Cycles

Cycles is considering all dupli objects as _dupli_child_original, and need to be hidden.
But since the other engines dont hide the dupli child orininal, I dont know why Cycles have to be different.
Maybe the original child should be hidden only with the F12 rendering?

See object_render_hide from blender_object.cpp

> In #53269#469815, @dfelinto wrote: > Problem still exists for Cycles Cycles is considering all dupli objects as `_dupli_child_original`, and need to be hidden. But since the other engines dont hide the dupli child orininal, I dont know why Cycles have to be different. Maybe the original child should be hidden only with the F12 rendering? See `object_render_hide` from `blender_object.cpp`

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53269
No description provided.