Partial Fix T53269: Dupli-verts/dupli-faces not working

This fixes the issue for the Draw Manager, but for Cycles this is still not
working. The iterator bpy.context.depsgraph.duplis seems to be correct though.